--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -9,19 +9,24 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Instalar Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.x'
-    - name: Instalar dependências
-      run: pip install requests beautifulsoup4
-    - name: Executar scraper
-      run: python scraper.py
-    - name: Salvar resultado
-      run: |
-        git config --global user.name "github-actions"
-        git config --global user.email "actions@github.com"
-        git add index.html
-        git commit -m "Atualização automática dos jogos"
-        git push
+      - uses: actions/checkout@v3
+
+      - name: Instalar Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Instalar dependências
+        run: pip install requests beautifulsoup4
+
+      - name: Executar scraper
+        run: python ./scraper.py
+
+      - name: Salvar resultado
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add index.html
+          git commit -m "Atualização automática dos jogos"
+          git push
+
